feat: add AuthController swagger decorators
